# openedx-tutor-plugins

plugins/tutor-contrib-brand/: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
plugins/tutor-contrib-brand/tutorbrand/: commands.py  plugin.py
plugins/tutor-contrib-brand/tutorbrand/patches/: local-docker-compose-jobs-services  mfe-caddyfile  mfe-volumes  openedx-lms-development-settings  openedx-lms-production-settings
plugins/tutor-contrib-paragon/: README.rst
plugins/tutor-contrib-paragon/tutorparagon/patches/: mfe-caddyfile  openedx-lms-development-settings
